<resources>

    <string name="app_name">TurnerApp</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="login_title"> ASSET AUDIT TRACKER</string>
    <string name="forgetpwd_title">FORGOT PASSWORD</string>
    
      <!-- Scan Asset -->
    <string name="profit_center">PROFIT CENTER</string>
    <string name="company_code">COMPANY CODE</string>
    <string name="asset_no">ASSETS NUMBER</string>
    <string name="sub_no">SUB NUMBER</string>
    <string name="scan_datetime">SCAN DATETIME</string>
    <string name="gps_coordinate">GPS COORDINATE</string>
    <string name="comment">COMMENTS</string>
   
    <string name="offline">Network unavailable. Please connect your device to network.</string>
    <string name="about_the_app">About the App</string>
    <string name="scan_assest">Scan Assets</string>
    <string name="submit_assest">Submit Assets to Server</string>
    <string name="contact_us">Contact  Us</string>
    <string name="term_of_use">Terms of Use </string>
    <string name="help">help </string>
    <string name="signout">sign out </string>
    <string name="cancel">Cancel</string>
    <string name="open_location_settings">Settings</string>
    <string name="scan_save_msg">Scanned assets saved successfully!!</string>
    <string name="scan_save_title">Save Assets</string>
    <string name="scan_update_title">Update Assets</string>
    <string name="scan_update_msg">Scanned assets updated successfully!!</string>
    <string name="delete_title">Delete Assets</string>
    <string name="delete_msg">Do you want to delete this assets?</string>

</resources>